<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">




            <TextView
                style="@style/med_edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employer"/>

            <EditText
                style="@style/med_edit_text"
                android:id="@+id/employer"
                android:layout_width="match_parent"
                android:hint="@string/employer_hint"/>

            <TextView
                style="@style/med_edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position"/>

            <EditText
                style="@style/med_edit_text"
                android:id="@+id/job_title"
                android:layout_width="match_parent"
                android:hint="@string/position_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                style="@style/med_edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clock_in"/>

            <EditText
                style="@style/med_edit_text"
                android:id="@+id/clock_in_time"
                android:layout_width="match_parent"
                android:hint="@string/clock_hint"
                android:inputType="time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                style="@style/med_edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clock_out"/>

            <EditText
                style="@style/med_edit_text"
                android:id="@+id/clock_out_time"
                android:layout_width="match_parent"
                android:hint="@string/clock_hint"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/large_edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/tip_entry_title"/>

    <EditText
        style="@style/large_edit_text_"
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/tip_hint"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_shift"
        android:onClick="saveShift"/>


</LinearLayout>